--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -108,12 +108,14 @@ main{
 }
 .button .bota {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(5,1fr);
   }
   .button  img {
-    height: 18px;
-    width: 18px;
+   
+    height: 1.1rem;
+    width: 1.1rem;
   }
+ 
 
   .button  p {
     min-width: 100px;
@@ -194,5 +196,5 @@ a:hover{
         padding-left: 60px;
         padding-right: 60px;
      }
-    
+   
 }
