--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -106,10 +106,7 @@ main{
   padding-right: 80px;
   width: 300px;
 }
-.button .bota {
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-  }
+
   .button  img {
    
     height: 1.1rem;
@@ -117,7 +114,7 @@ main{
   }
  
 
-  .button  p {
+  .button   {
     min-width: 100px;
     font-size: 1.2em;
     color: var(--white);
@@ -195,6 +192,6 @@ a:hover{
        
         padding-left: 60px;
         padding-right: 60px;
-     }
-   
+    
 }
+ }
