--- a/nft-preview-card-component-main/styles.css
+++ b/nft-preview-card-component-main/styles.css
@@ -154,3 +154,15 @@ footer a {
  footer a:hover{
     color: var(--cyan);
  }
+
+ @media (min-width: 600px) {
+        
+    
+    
+    main{
+            height: 100%;
+            width: 18rem;
+        }
+
+
+ }
